# GDS_Parameter_Viewer

./: README.md  pyproject.toml
GDS_Parameter_Viewer/: GDSViewer.py  Gate.py  GateWindow.py  __init__.py
examples/: _functions.py  _make_gds.py  array_343.py  array_343_load_from_uuid.py  simple_device.py
examples/example_gds/: 343.gds  simple_device.gds
interactive_gds/: GDSViewer.py  GateWindow.py
tests/: test_installs.sh
