[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "GDS-Parameter-Viewer"
version = "0.1.0"
description = "Add your description here"
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.10"
dependencies = [
    "gdstk~=1.0",
#    "ipython~=9.11",
    "klayout~=0.30.8",
    "matplotlib~=3.10",
    "numpy>=2.0",
    "pyqt6-sip~=13.11",
    "pyqtgraph~=0.14",
    "pyside6~=6.11",
    "qcodes~=0.58",
]

[tool.hatch.build.targets.wheel]
packages = ["GDS_Parameter_Viewer"]

[project.optional-dependencies]
qutech = [
    "core-tools>=1.7.7",
    "sqdl-client>=1.0.8",
]
