[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "GDS-Parameter-Viewer"
version = "0.1.0"
description = "Add your description here"
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.10"
dependencies = [
    "core-tools>=1.7.7",
    "gdstk~=1.0",
    "ipython>=8.0",
    "klayout~=0.30.8",
    "matplotlib>=3.7",
    "numpy>=2.0",
    "pyqt6-sip>=13.4",
    "pyqtgraph~=0.14",
    "pyside6>=6.3",
    "qcodes~=0.5",
    "sqdl-client>=1.0.8",
]

[tool.hatch.build.targets.wheel]
packages = ["GDS_Parameter_Viewer"]

[project.optional-dependencies]
qutech = [
    "core-tools>=1.7.7",
    "sqdl-client>=1.0.8",
]
